--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,14 @@
 
 en:
   hello: "Hello world"
+#   activerecord:
+#     attributes:
+#       user:
+#         email: "E-mail address"
+#     errors:
+#       models:
+#         user:
+#           attributes:
+#             email:
+#               blank: "is required"  
+#               unique:
